[tool.poetry]
name = "randoor"
version = "0.1.0"
description = "Generate randomized indoor scene."
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=2.7,!=3.0.*,!=3.1.*,!=3.2.*,!=3.3.*"
pyglet = "1.5.0"
cython = "0.29.24"
trimesh = "^3.9.34"
scikit-learn = "0.20"
numpy-quaternion = "2019.12.11.22.25.52"
Shapely = "^1.7.1"

[tool.poetry.dev-dependencies]
ipykernel = "4.8.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
